--- a/floorp/browser/components/search/extensions/google/manifest.json
+++ b/floorp/browser/components/search/extensions/google/manifest.json
@@ -1,15 +1,14 @@
 {
-  "name": "__MSG_extensionName__",
-  "description": "__MSG_extensionDescription__",
+  "name": "Google",
+  "description": "Google Search",
   "manifest_version": 2,
   "version": "1.2",
-  "applications": {
+  "browser_specific_settings": {
     "gecko": {
-      "id": "google@search.mozilla.org"
+      "id": "google@search.astian.org"
     }
   },
   "hidden": true,
-  "default_locale": "en",
   "icons": {
     "16": "favicon.ico"
   },
@@ -18,19 +17,19 @@
   ],
   "chrome_settings_overrides": {
     "search_provider": {
-      "keyword": "@google",
-      "name": "__MSG_extensionName__",
-      "search_url": "__MSG_searchUrl__",
-      "search_form": "__MSG_searchForm__",
-      "suggest_url": "__MSG_suggestUrl__",
+      "keyword": "@g",
+      "name": "Google",
+      "search_url": "https://www.google.com/search",
+      "search_form": "https://www.google.com/search?q={searchTerms}",
+      "suggest_url": "https://www.google.com/complete/search?q={searchTerms}",
       "params": [
         {
           "name": "channel",
           "condition": "pref",
-          "pref": "__MSG_channelPref__"
+          "pref": "google_channel_row"
         }
       ],
-      "search_url_get_params": "__MSG_searchUrlGetParams__"
+      "search_url_get_params": "q={searchTerms}"
     }
   }
 }
