--- a/floorp/browser/components/search/extensions/bing/manifest.json
+++ b/floorp/browser/components/search/extensions/bing/manifest.json
@@ -3,9 +3,9 @@
   "description": "Microsoft Bing",
   "manifest_version": 2,
   "version": "1.3",
-  "applications": {
+  "browser_specific_settings": {
     "gecko": {
-      "id": "bing@search.mozilla.org"
+      "id": "bing@search.astian.org"
     }
   },
   "hidden": true,
@@ -17,45 +17,45 @@
   ],
   "chrome_settings_overrides": {
     "search_provider": {
-      "keyword": "@bing",
+      "keyword": "@b",
       "name": "Bing",
       "search_url": "https://www.bing.com/search",
-      "search_form": "https://www.bing.com/search?pc=MOZI&q={searchTerms}",
-      "search_url_get_params": "pc=MOZI&q={searchTerms}",
+      "search_form": "https://www.bing.com/search?form=MIDOR1&PC=SIE117&PTAG=SYS1000000&q={searchTerms}",
+      "search_url_get_params": "PC=SIE117&PTAG=SYS1000000&q={searchTerms}",
       "params": [
         {
           "name": "form",
           "condition": "purpose",
           "purpose": "contextmenu",
-          "value": "MOZCON"
+          "value": "MIDOR1"
         },
         {
           "name": "form",
           "condition": "purpose",
           "purpose": "searchbar",
-          "value": "MOZSBR"
+          "value": "MIDOR1"
         },
         {
           "name": "form",
           "condition": "purpose",
           "purpose": "homepage",
-          "value": "MOZSPG"
+          "value": "MIDOR1"
         },
         {
           "name": "form",
           "condition": "purpose",
           "purpose": "keyword",
-          "value": "MOZLBR"
+          "value": "MIDOR1"
         },
         {
           "name": "form",
           "condition": "purpose",
           "purpose": "newtab",
-          "value": "MOZTSB"
+          "value": "MIDOR1"
         }
       ],
       "suggest_url": "https://www.bing.com/osjson.aspx",
-      "suggest_url_get_params": "query={searchTerms}&form=OSDJAS&language={moz:locale}"
+      "suggest_url_get_params": "query={searchTerms}&form=MIDORI&language={moz:locale}"
     }
   }
 }
