--- a/floorp/browser/components/search/extensions/ddg/manifest.json
+++ b/floorp/browser/components/search/extensions/ddg/manifest.json
@@ -3,9 +3,9 @@
   "description": "Search DuckDuckGo",
   "manifest_version": 2,
   "version": "1.1",
-  "applications": {
+  "browser_specific_settings": {
     "gecko": {
-      "id": "ddg@search.mozilla.org"
+      "id": "ddg@search.astian.org"
     }
   },
   "hidden": true,
@@ -22,38 +22,6 @@
       "search_url": "https://duckduckgo.com/",
       "search_form": "https://duckduckgo.com/?q={searchTerms}",
       "search_url_get_params": "q={searchTerms}",
-      "params": [
-        {
-          "name": "t",
-          "condition": "purpose",
-          "purpose": "contextmenu",
-          "value": "ffcm"
-        },
-        {
-          "name": "t",
-          "condition": "purpose",
-          "purpose": "keyword",
-          "value": "ffab"
-        },
-        {
-          "name": "t",
-          "condition": "purpose",
-          "purpose": "searchbar",
-          "value": "ffsb"
-        },
-        {
-          "name": "t",
-          "condition": "purpose",
-          "purpose": "homepage",
-          "value": "ffhp"
-        },
-        {
-          "name": "t",
-          "condition": "purpose",
-          "purpose": "newtab",
-          "value": "ffnt"
-        }
-      ],
       "suggest_url": "https://ac.duckduckgo.com/ac/",
       "suggest_url_get_params": "q={searchTerms}&type=list"
     }
