--- a/floorp/browser/components/search/extensions/startpage/manifest.json
+++ b/floorp/browser/components/search/extensions/startpage/manifest.json
@@ -1,29 +1,29 @@
 {
-    "name": "Startpage",
-    "description": "Startpage Search Engine",
-    "manifest_version": 2,
-    "version": "1.1",
-    "applications": {
-      "gecko": {
-        "id": "startpage@search.mozilla.org"
-      }
-    },
-    "hidden": true,
-    "icons": {
-      "16": "favicon.ico"
-    },
-    "web_accessible_resources": [
-      "favicon.ico"
-    ],
-    "chrome_settings_overrides": {
-      "search_provider": {
-        "keyword": "@st",
-        "name": "Startpage",
-        "search_url": "https://www.startpage.com/sp/search",
-        "search_form": "https://www.startpage.com/",
-        "search_url_post_params": "query={searchTerms}&segment=startpage.meta",
-        "suggest_url": "https://www.startpage.com/suggestions",
-        "suggest_url_get_params": "q={searchTerms}&format=opensearch"
-      }
+  "name": "Startpage",
+  "description": "Startpage Search Engine.",
+  "manifest_version": 2,
+  "version": "1.0",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "startpage@search.astian.org"
+    }
+  },
+  "hidden": true,
+  "icons": {
+    "16": "favicon.ico"
+  },
+  "web_accessible_resources": [
+    "favicon.ico"
+  ],
+  "chrome_settings_overrides": {
+    "search_provider": {
+      "keyword": "@sp",
+      "name": "Startpage",
+      "search_url": "https://www.startpage.com/sp/search",
+      "search_form": "https://www.startpage.com/",
+      "search_url_post_params": "query={searchTerms}&segment=startpage.midori",
+      "suggest_url": "https://www.startpage.com/suggestions",
+      "suggest_url_get_params": "q={searchTerms}&format=opensearch"
     }
   }
+}
