--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -112,6 +112,7 @@ jobs:
         os.system("sudo apt update")
         os.system("sudo apt install xvfb")
         os.system("sudo apt install libasound2-dev")
+        os.system("sudo apt-get install libasound2-dev")
 
         shutil.copyfile("./.github/workflows/src/linux/shared/mozconfig_linux_base","./mozconfig")
         # os.system("cp ./.github/workflows/src/linux/shared/mozconfig_linux_base ./mozconfig")
