--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,7 +2,7 @@ blank_issues_enabled: false
 contact_links:
   - name: Feature Request
     url: https://github.com/goastian/midori-desktop/discussions/new?category=feature-request
-    about: Suggest an idea for Floorp.
+    about: Suggest an idea for Midori.
   - name: User Support
     url: https://astian.org/community/midori-browser/
     about: Support for end-user.
