--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,8 @@ security/manager/.nss.checkout
 
 # Ignore newtab component build assets
 browser/components/newtab/logs/
+floorp/browser/locales/
+
 
 # Ignore ASRouter generated test files
 browser/components/newtab/content-src/asrouter/schemas/corpus/CFRMessageProvider.messages.json
