--- a/floorp/browser/extensions/webextensions/floorp-actions/manifest.json
+++ b/floorp/browser/extensions/webextensions/floorp-actions/manifest.json
@@ -1,22 +1,20 @@
 {
   "manifest_version": 2,
-  "name": "Midori Actions",
-  "description": "Controls Midori future from Gesturefy",
+  "name": "Floorp Actions",
+  "description": "Controls Floorp future from Gesturefy",
   "version": "1.0",
-  "homepage_url": "https://astian.org/midori-browser",
+  "homepage_url": "https://floorp.app",
   "background": {
-    "scripts": [
-      "background.js"
-    ]
+    "scripts": ["background.js"]
   },
   "experiment_apis": {
     "aboutConfigPrefs": {
-        "schema": "API/aboutConfigPrefs.json",
-        "parent": {
-            "scopes": ["addon_parent"],
-            "script": "API/aboutConfigPrefs.js",
-            "paths": [["aboutConfigPrefs"]]
-        }
+      "schema": "API/aboutConfigPrefs.json",
+      "parent": {
+        "scopes": ["addon_parent"],
+        "script": "API/aboutConfigPrefs.js",
+        "paths": [["aboutConfigPrefs"]]
+      }
     },
     "floorpActions": {
       "schema": "API/floorpActions.json",
@@ -27,8 +25,8 @@
       }
     }
   },
-   "applications": {
-     "gecko": {
+  "applications": {
+    "gecko": {
       "id": "floorp-actions@floorp.ablaze.one"
     }
   }
