--- a/floorp/browser/extensions/webextensions/official-site-ua/manifest.json
+++ b/floorp/browser/extensions/webextensions/official-site-ua/manifest.json
@@ -1,6 +1,5 @@
 {
-
-  "description": "Astian 内部サイトや、その他の認められるサイトに Firefox の UA の上に Midori のユーザエージェントを上書きします",
+  "description": "Ablaze 内部サイトや、その他の認められるサイトに Firefox の UA の上に Floorp のユーザエージェントを上書きします",
   "manifest_version": 2,
   "name": "official-site-ua",
   "version": "1.1",
@@ -9,11 +8,16 @@
   },
   "applications": {
     "gecko": {
-    "id": "official-site-ua@floorp.ablaze.one"
-		}
+      "id": "official-site-ua@floorp.ablaze.one"
+    }
   },
   "permissions": [
-    "webRequest", "webRequestBlocking", "https://astian.org/*", "https://astian.org/midori-browser/*", "https://astian.org/community/*", "https://ss1.xrea.com/menkuri.s270.xrea.com/*"
+    "webRequest",
+    "webRequestBlocking",
+    "https://ablaze.one/*",
+    "https://floorp.ablaze.one/*",
+    "https://support.ablaze.one/*",
+    "https://ss1.xrea.com/menkuri.s270.xrea.com/*"
   ],
   "background": {
     "scripts": ["background.js"]
@@ -22,9 +26,7 @@
     "BrowserInfo": {
       "schema": "APIs/BrowserInfo.json",
       "parent": {
-        "scopes": [
-          "addon_parent"
-        ],
+        "scopes": ["addon_parent"],
         "script": "APIs/BrowserInfo.js",
         "paths": [["BrowserInfo"]]
       }
